<resources>
    <string name="app_name">Quizerr</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_example_email">example@mail.com</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_account_exists">Already have an account?\n<u>Click here to login</u></string>
    <string name="action_no_account">Don\'t have an account?\n<u>Click here to register</u></string>
    <string name="prompt_new_account_register">New user registration</string>
    <string name="prompt_account_login">Account login</string>
    <string name="prompt_forgot_password"><u>Forgot password?</u></string>
    <string name="prompt_enter_email">Please, enter your E-mail address</string>
    <string name="action_reset_password">Reset password</string>
    <string name="error_invalid_email">Not a valid email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="error_already_registered">User already registered</string>
    <string name="error_sign_up">Failed to create new account</string>
    <string name="error_no_email">Email field can\'t be empty</string>
    <string name="error_no_password">Password field can\'t be empty</string>
    <string name="error_sign_in">Sign in failed</string>
    <string name="error_sign_in_user_not_exist">User does not exist</string>
    <string name="reset_password_email_pending">Email pending…</string>
    <string name="error_reset_password_cancelled">Cancelled password reset</string>
    <string name="prompt_reset_password">Please, enter your email address</string>
    <!-- Strings related to home panel -->
    <string name="label_home_panel_all_courses">All courses</string>
    <string name="label_home_panel_sign_out">Sign out</string>
    <string name="label_home_panel_active_tests">Active tests</string>
    <string name="label_home_panel_results">Results</string>
    <string name="label_home_panel_create_course">Create course</string>
    <string name="label_home_panel_create_test">Create test</string>
    <string name="label_home_panel_my_account">Account details</string>
    <string name="label_home_panel_my_courses">My courses</string>
    <string name="label_home_panel_my_tests">My tests</string>
    <string name="label_home_panel_subscribed_courses">Subscribed courses</string>
    <!-- Strings related to account details -->
    <string name="prompt_account_name">Name</string>
    <string name="prompt_account_created_tests">Tests created</string>
    <string name="prompt_account_created_courses">Courses created</string>
    <string name="prompt_account_delete">Delete account</string>
    <string name="action_account_delete">Delete</string>
    <!-- Strings related to create course -->
    <string name="prompt_create_course_name">Name new course</string>
    <string name="prompt_create_course_name_hint">Write course name here</string>
    <string name="prompt_create_course_description">Description for new course</string>
    <string name="prompt_create_course_description_hint">Write course description here</string>
    <string name="action_course_create">Create</string>
    <string name="action_course_cancel">Cancel</string>
    <string name="error_new_course_no_name">Course must have a name</string>
    <string name="error_new_course_no_description">Course must have a description</string>
    <string name="create_course_success">Successfully created new course</string>
    <string name="create_course_canceled">Create course cancelled</string>
    <!-- Strings related to create test -->
    <string name="action_create_test_cancel">Cancel</string>
    <string name="action_create_test_next">Next</string>
    <string name="prompt_create_test_name">Enter test name</string>
    <string name="prompt_create_test_name_hint">Test name</string>
    <string name="prompt_create_test_date">Pick deadline for this test</string>
    <string name="prompt_pick_test_date_hint"><u>Click to pick date</u></string>
    <string name="prompt_create_test_num_questions">Enter number of questions</string>
    <string name="prompt_create_test_num_questions_hint">Enter number here</string>
    <string name="prompt_create_test_num_answers">Enter number of answers for each question</string>
    <string name="prompt_create_test_num_answers_hint">Enter number here</string>
    <string name="action_create_test">Create</string>
    <string name="prompt_answer_hint">Write answer here</string>
    <string name="prompt_question_hint">Write question here</string>
    <string name="prompt_correct">Correct</string>
    <!-- Strings related to courses list -->
    <string name="prompt_course_item_enrolled">Enrolled:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_home_panel_create_question">Question</string>
    <string name="action_edit">Edit</string>
    <string name="label_all_courses">Courses</string>
    <string name="action_subscribe">Subscribe</string>
    <string name="action_unsubscribe">Unsubscribe</string>
    <string name="action_join">Join</string>
    <string name="action_leave">Leave</string>
    <string name="label_my_courses">My Courses</string>
    <string name="label_my_tests">My Tests</string>
    <string name="edit_course_menu_item">Edit course</string>
    <string name="delete_course_menu_item">Delete course</string>
    <string name="add_test_menu_item">Add test</string>
    <string name="prompt_course_name">Course name</string>
    <string name="prompt_course_description">Course description</string>
    <string name="prompt_course_author">Author</string>
    <string name="edit_course_success">Successfully edited course</string>
    <string name="edit_course_cancel">Course edit cancelled</string>
    <string name="edit_course_failed">Course edit failed</string>
    <string name="sign_in_user_not_exist">User does not exist</string>
    <string name="label_results">Results</string>
    <string name="result_course_name">Course</string>
    <string name="result_test_name">Test</string>
    <string name="result_score">Score</string>
    <string name="action_begin">Begin</string>
    <string name="label_active_tests">Active tests</string>
    <string name="action_delete_fail">Account delete failed. Logout and login to application and try again.</string>
    <string name="action_delete_success">Successfully deleted account</string>
    <string name="create_course_failed">Failed to create new course</string>
    <string name="question_delete_course">Do you want to delete this course?</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="label_choose_course">Choose course</string>
    <string name="toast_no_courses_available">You have no courses. Create one before creating test.</string>
    <string name="label_solve_test">Solve test</string>
    <string name="prompt_solve_test_date">Test must be finished before:</string>
    <string name="prompt_solve_test_num_questions">Number of questions:</string>
    <string name="action_test_begin">Begin</string>
    <string name="action_solve_test_back">Back</string>
    <string name="prompt_scored">Your score:</string>
    <string name="action_finish">Finish</string>
    <string name="label_reset_password">Reset password</string>
    <!--        <string name="subscribe">Subscribe</string>-->
    <!--        <string name="unsubscribe">Unsubscribe</string>-->
    <!--        <string name="create_test_question_hint">Question text</string>-->
    <!--        <string name="create_test_add_answers">Add answers</string>-->
    <!--        <string name="create_test_answer1">Answer 1</string>-->
    <!--        <string name="create_test_answer2">Answer 2</string>-->
    <!--        <string name="create_test_answer3">Answer 3</string>-->
    <!--        <string name="create_test_answer4">Answer 4</string>-->
    <!--        <string name="correct">Correct</string>-->
    <!--        <string name="next">Next</string>-->
    <!--        <string name="edit">Edit</string>-->
    <!--        <string name="answer_hint">Write answer here</string>-->
    <!--        <string name="course_name">Course name</string>-->
    <!--        <string name="teacher_name">Teacher name</string>-->
    <!--        <string name="description">Description</string>-->
    <!--        <string name="begin_test">Begin test</string>-->
    <!--        <string name="solve_test_number_of_questions">Number of questions in this test</string>-->
    <!--        <string name="solve_test_deadline">Deadline for this test</string>-->
    <!--        <string name="save">Save</string>-->
    <!--        <string name="test_summary_score_prompt">Your Score:</string>-->
    <!--        <string name="finish">finish</string>-->
    <!--        <string name="add_test_menu_item">Add test</string>-->
    <!--        <string name="edit_course_menu_item">Edit course</string>-->
    <!--        <string name="delete_course_menu_item">Delete course</string>-->
    <!--        <string name="show_result_test_name">Test name</string>-->
    <!--        <string name="show_result_course_name">Course name</string>-->
    <!--        <string name="show_result_score">Score</string>-->
    <!--        <string name="add_course_description_prompt">Add description for this course</string>-->
    <!--        <string name="edit_course_name">Edit course name</string>-->
    <!--        <string name="edit_course_description">Edit course description</string>-->
    <!--        <string name="edit_course_success">Successfully edited course</string>-->
    <!--        <string name="edit_course_cancel">Cancelled editing course</string>-->
    <!--        <string name="edit_course_failed">Failed to edit course</string>-->
    <!--        <string name="update_account_success">Account information updated</string>-->
    <!--        <string name="create_course_success">New course created</string>-->
    <!--        <string name="create_course_failed">Failed to create new course</string>-->
</resources>