<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/home_panel_background"
                android:gravity="center"
                android:paddingTop="40dp"
                android:paddingBottom="48dp">

                <TextView
                    android:id="@+id/header_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/lato_bold"
                    android:text="@string/label_home_panel_create_test"
                    android:textColor="@color/sandish"
                    android:textSize="42sp" />

            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/account_name_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="16dp"
                app:cardBackgroundColor="@color/green_dark"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/lato"
                        android:gravity="center"
                        android:text="@string/prompt_create_test_name"
                        android:textColor="@color/sandish"
                        android:textSize="24sp" />

                    <EditText
                        android:id="@+id/test_name_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="12dp"
                        android:layout_marginBottom="8dp"
                        android:autofillHints=""
                        android:ems="10"
                        android:fontFamily="@font/lato"
                        android:gravity="center"
                        android:hint="@string/prompt_create_test_name_hint"
                        android:inputType="textPersonName"
                        android:textColor="@color/sandish"
                        android:textColorHint="@color/white"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lato"
                        android:gravity="center"
                        android:text="@string/prompt_create_test_date"
                        android:textColor="@color/sandish"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/test_deadline_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginRight="12dp"
                        android:layout_marginBottom="12dp"
                        android:fontFamily="@font/lato"
                        android:gravity="center"
                        android:text="@string/prompt_pick_test_date_hint"
                        android:textColor="@color/sandish"
                        android:textColorHint="@color/white"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lato"
                        android:gravity="center"
                        android:text="@string/prompt_create_test_num_questions"
                        android:textColor="@color/sandish"
                        android:textSize="24sp" />

                    <EditText
                        android:id="@+id/num_of_questions_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="12dp"
                        android:layout_marginBottom="8dp"
                        android:autofillHints=""
                        android:ems="10"
                        android:fontFamily="@font/lato"
                        android:gravity="center"
                        android:hint="@string/prompt_create_test_num_questions_hint"
                        android:inputType="numberSigned"
                        android:textColor="@color/sandish"
                        android:textColorHint="@color/white"
                        android:textSize="24sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="16dp"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/cancel_button"
                            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:layout_weight="1"
                            android:background="@drawable/accent_rounded_background"
                            android:fontFamily="@font/lato_bold"
                            android:text="@string/action_course_cancel"
                            android:textAllCaps="false"
                            android:textColor="#fff"
                            android:textSize="24sp" />

                        <Button
                            android:id="@+id/create_button"
                            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:layout_weight="1"
                            android:background="@drawable/accent_rounded_background"
                            android:fontFamily="@font/lato_bold"
                            android:text="@string/action_course_create"
                            android:textAllCaps="false"
                            android:textColor="#fff"
                            android:textSize="24sp" />
                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>