<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_dark"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    tools:context=".activities.ResetPasswordActivity">

    <TextView
        android:id="@+id/reset_prompt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/lato"
        android:gravity="center_horizontal"
        android:text="@string/prompt_forgot_password"
        android:textColor="@color/sandish"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reset_prompt"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/white_rounded_background"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset_prompt">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="30dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/lato"
                android:gravity="center_horizontal"
                android:text="@string/prompt_reset_password"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/lato"
                android:labelFor="@id/email_edit_text"
                android:text="@string/prompt_email"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/email_edit_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="10dp"
                android:drawableStart="@drawable/ic_email_grey_24dp"
                android:drawableLeft="@drawable/ic_email_grey_24dp"
                android:drawablePadding="10dp"
                android:fontFamily="@font/lato"
                android:hint="@string/prompt_example_email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:singleLine="true"
                android:textSize="20sp" />


            <ProgressBar
                android:id="@+id/progressBar"
                style="@android:style/Widget.DeviceDefault.Light.ProgressBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:visibility="invisible" />

            <Button
                android:id="@+id/reset_password_button"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="22dp"
                android:background="@drawable/accent_rounded_background"
                android:fontFamily="@font/lato_bold"
                android:text="@string/action_reset_password"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="20sp" />

        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
