<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:background="@color/green_dark"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/course_name_title_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:gravity="center"
            android:text="@string/prompt_course_name"
            android:textColor="@color/sandish"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/course_name_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/lato"
            android:gravity="center"
            android:minLines="1"
            android:text="@string/prompt_create_course_name"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/course_author_title_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:gravity="center"
            android:text="@string/prompt_course_author"
            android:textColor="@color/sandish"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/course_author_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/lato"
            android:gravity="center"
            android:maxLines="2"
            android:minLines="1"
            android:text="@string/prompt_create_course_name"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/course_description_title_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:gravity="center"
            android:text="@string/prompt_course_description"
            android:textColor="@color/sandish"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/course_description_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/lato"
            android:gravity="center"
            android:maxLines="10"
            android:minLines="1"
            android:text="@string/prompt_create_course_name"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>
</FrameLayout>

